--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 monitor_speed = 115200
 upload_protocol = esptool
 upload_speed = 921600
-board_upload.before_reset = usb_reset
+;board_upload.before_reset = usb_reset
