--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ monitor_speed = 115200
 upload_protocol = esptool
 upload_speed = 921600
 ;board_upload.before_reset = usb_reset
+lib_deps = 
+	adafruit/Adafruit SSD1306@^2.5.7
