--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,4 @@ upload_protocol = esptool
 upload_speed = 921600
 ;board_upload.before_reset = usb_reset
 lib_deps = 
-	adafruit/Adafruit SSD1306@^2.5.7
+	;adafruit/Adafruit SSD1306@^2.5.7
